1998-08-31  Jochen Wiedmann  <joe@ispsoft.de> (0.1007)

	* Makefile.PL: Added ABSTRACT_FROM, AUTHOR and CAPI.
	* Statement.xs: Partial fix of memory leaks by changing
	  newRV() to newRV_noinc(). Some leaks are still remaining,
	  though. :-(

1998-08-29  Jochen Wiedmann  <joe@ispsoft.de> (0.1006)

	* lib/SQL/Statement.pm (UPDATE): Fixed a bug in the parameter
	  handling.
	* Statement.xs (new): Added a missing REFCNT_inc on
	  $self->{'statement'}

1998-07-23  Jochen Wiedmann  <joe@ispsoft.de> (0.1005)

	* sql_data.h: Added "#define NULL" for SunOS 4.
	* lib/SQL/Statement.pm (execute): Added "delete $self->{'tables'}"
	  to unlock and/or close tables.

1998-07-22  Jochen Wiedmann  <joe@ispsoft.de> (0.1004)

	* sql_yacc.y: Added -DMSDOS under WIN32, so that malloc.h
	  gets included.
	* lib/SQL/Statement.pm (UPDATE): Fixed $val->Num() to
	  $val->num(). My thanks to Gerald Richter, <richter@ecos.de>.
	* sql_yacc.y: Replaced isalnum with isalnum_, as isalnum('_') = 0.
	  Pointed out by Gerald Richter, <richter@ecos.de>.

1998-06-25  Jochen Wiedmann  <joe@ispsoft.de> (0.1003)

	* lib/SQL/Statement.pm: Fixed bug in "ORDER BY" with numeric
	  columns. Removed misc.files_as_tables feature.

1998-05-20  Jochen Wiedmann  <joe@ispsoft.de> (0.1002)

	* Added misc.files_as_tables feature

1998-05-14  Jochen Wiedmann  <joe@ispsoft.de> (0.1001)

	* Initial version
