@@ -4,6 +4,7 @@ Makefile.PL			Makefile generator
 README				Module description
 lib/SQL/Eval.pm			Perl module for deriving SQL engines
 lib/SQL/Statement.pm		Perl part of the module
+lib/SQL/Statement/Hash.pm	Fragment of a hash based SQL engine
 Statement.xs			XS part of the module
 doc/sql-92.bnf			BNF grammar of ANSI SQL
 doc/sql-92.unimplemented        Unimplemented parts of the above grammar
@@ -18,4 +19,5 @@ t/20parser.t			Parser test
 t/30features.t			Feature test
 t/40where.t			WHERE clause evaluation test
 t/50eval.t			Statement evaluation test
+t/60hash.t			Tests for SQL::Statement::Hash
 test.pl				Benchmark script
