@@ -1,0 +1,12 @@
+# -*- perl -*-
+
+require 5.004;
+use strict;
+
+require SQL::Statement;
+
+
+package SQL::Statement::Hash;
+
+$SQL::Statement::Hash::VERSION = '0.1001';
+@SQL::Statement::Hash::ISA = qw(SQL::Statement);
