@@ -1,3 +1,11 @@
+1998-09-08  Jochen Wiedmann  <joe@ispsoft.de> (0.1008)
+
+	* sql_yacc.y: Fixed typo in the lexer: ALL was returned instead of
+	  ASC. My thanks to Lyn A Headley <laheadle@cs.uchicago.edu>.
+	* lib/SQL/Statement.pm: Added INSTALLATION section with pointers
+	  to alloca sources. My thanks to Theo Petersen <theo@acsp.com>.
+	* lib/SQL/Statement.pm: Added CLIKE.
+
 1998-08-31  Jochen Wiedmann  <joe@ispsoft.de> (0.1007)
 
 	* Makefile.PL: Added ABSTRACT_FROM, AUTHOR and CAPI.
